doc/deployment/iptables.conf
# Generated by iptables-save v1.4.21 on Thu Nov 30 17:59:51 2017
*filter
:INPUT ACCEPT [461369:123837949]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [445565:36428667]
:DOCKER - [0:0]
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 50000 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 8080 -j ACCEPT
COMMIT
# Completed on Thu Nov 30 17:59:51 2017
# Generated by iptables-save v1.4.21 on Thu Nov 30 17:59:51 2017
*nat
:PREROUTING ACCEPT [32874:2739014]
:INPUT ACCEPT [13889:1138168]
:OUTPUT ACCEPT [339840:23689506]
:POSTROUTING ACCEPT [340704:23736402]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 50000 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 50000 -j DNAT --to-destination 172.17.0.2:50000
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 8082 -j DNAT --to-destination 172.17.0.2:8080
COMMIT
# Completed on Thu Nov 30 17:59:51 2017
# 测试服务器防火墙配置，docker, saltstack，jenkins，
